--- a/index.html
+++ b/index.html
@@ -2,41 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="/css/reset.css">
+<link rel="stylesheet" href="/css/css.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Intro component with sign up form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
 
-  Learn to code by watching others
+    <div class="izquierda">
+      <h1>Learn to code by watching others</h1>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+        but understanding how developers think is invaluable.</p>
+      </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+      <div class="derecha">
 
-  Try it free 7 days then $20/mo. thereafter
+        <p class="destacado"><strong>Try it free 7 days</strong> then $20/mo. thereafter<p>
+          <div class="formulario">
+            <form class="" action="index.html" method="post">
+              <input type="text" name="nombre" value="First Name">
+              <input type="text" name="apellido" value="Last Name">
+              <input type="email" name="correo" value="Email Adress">
+              <input type="`password" name="contrasena" value="Password">
+              <input type="submit" name="" value="CLAIM YOUR FREE TRIAL">
+            </form>
+            <p class="sub-form">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+          </div>
 
-  Claim your free trial 
+        </div>
+      </main>
 
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
-</html>
+      <footer>
+        <p class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="https://github.com/marclopez23">Marc López</a>.
+        </p>
+      </footer>
+    </body>
+    </html>
